Prevent veritcal scrollbars on the edit yaml page
Adjust editor height to prevent the scrollbars from showing at certain
window heights.

--- a/app/styles/_core.less
+++ b/app/styles/_core.less
@@ -972,11 +972,8 @@ a.disabled-link {
     .ace_gutter {
       color: #8b8d8f;
     }
-    @media (min-height: 550px) {
+    @media (min-height: 700px) {
       height: 60vh;
-    }
-    @media (min-height: 750px) {
-      height: 70vh;
     }
   }
 }
